Prevent vertical scrolling on mobile devices
Refs #1.

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -35,10 +35,14 @@ a {
   }
 }
 
+body,
+html {
+  height: 100%;
+}
+
 body {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
 }
 
 h1 {
